force-app/main/default/objects/df_122_egendom__c/df_122_egendom__c.object-meta.xml
<CustomObject>
    <label>Egendom</label>
    <nameField>
        <label>Egendom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Egendoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>