force-app/main/default/objects/df_122_egendom__c/fields/egendom_beskrivning_av_fremlet__c.field-meta.xml
<CustomField>
    <fullName>egendom_beskrivning_av_fremlet__c</fullName>
    <description>Beskrivning av föremålet</description>
    <label>Egendom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>