force-app/main/default/objects/df_122_egendom__c/fields/gare_till_egendomen__c.field-meta.xml
<CustomField>
    <fullName>gare_till_egendomen__c</fullName>
    <label>Ägare till egendomen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gare_person1_egendom</fullName>
                <label>{frnamn_person1} {efternamn_person1}</label>
            </value>
            <value>
                <fullName>gare_person2_egendom</fullName>
                <label>{person_2_frnamn} {efternamn_person2}</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>